wherever: guard handle_conf_change() from concurrent execution

Fixes: http://tracker.ceph.com/issues/24823
Signed-off-by: Venky Shankar <vshankar@redhat.com>
(cherry picked from commit aad318abc9a680d68aab96b051fb7457c8f7feac)

 Conflicts:
	src/common/ceph_context.cc
	src/mds/MDSDaemon.cc
	src/mon/Monitor.cc
	src/osd/OSD.cc
	src/osdc/Objecter.cc

fix conflicts in the form of using `Mutex` in place of `ceph::mutex`
(w/ the appropriate lock, wait and singal semantics).