src/mds/MDSDaemon.cc
@@ -1095,8 +1095,11 @@ void MDSDaemon::suicide()
 
   //because add_observer is called after set_up_admin_socket
   //so we can use asok_hook to avoid assert in the remove_observer
-  if (asok_hook != NULL)
+  if (asok_hook != NULL) {
+    mds_lock.Unlock();
     g_conf->remove_observer(this);
+    mds_lock.Lock();
+  }
 
   clean_up_admin_socket();
 
